fixed sidebar so it never overlaps with content

--- a/__site/css/sidebar.css
+++ b/__site/css/sidebar.css
@@ -10,8 +10,7 @@
   height: 85.4vh;
   row-gap: 4rem;
   position: fixed;
-  min-width: 100%;
-  max-width: 100%;
+  width: calc((100vw - 6rem) / 12 * 2 - 1.2rem)
 }
 
 .sidebar a span {
@@ -160,8 +159,12 @@
 }
 
 @media (max-width: 1280px) {
-  .sidebar {
+  .sidebar-container {
     grid-column: 1/4;
+  }
+
+  .sidebar {  
+    width: calc((100vw - 6rem) / 12 * 3 - 1.2rem)
   }
 }
 
@@ -175,6 +178,7 @@
     row-gap: 2rem;
     height: inherit;
     padding: 2rem;
+    width: 100%;
   }
 
   .links {
